cambios amigos y amigas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola Estudiantes este es mi sitio web! Sigueme en Instagram @arrosito</p>
+    <p>Hola Amigas y amigos xd este es mi sitio web! Sigueme en Instagram @arrosito</p>
 </body>
 </html>
